--- a/src/main/resources/views/WelcomeView.fxml
+++ b/src/main/resources/views/WelcomeView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2B2B2B;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.WelcomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2B2B2B;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.WelcomeController">
    <VBox alignment="CENTER" layoutX="201.0" layoutY="311.0" prefHeight="53.0" prefWidth="199.0">
       <Button mnemonicParsing="false" onAction="#truthButton" prefHeight="25.0" prefWidth="196.0" text="WANNA KNOW SOMETHING INSTEAD?">
          <font>
